--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,10 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Macos
+.DS_Store
+.AppleDouble
+.LSOveride
+# Thumbnails
+._*
